--- a/main/index.html
+++ b/main/index.html
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="work.html" class="nav-link">
+          <a href="project.html" class="nav-link">
             My Project
           </a>
         </li>
